Set background to gradient

--- a/website.html
+++ b/website.html
@@ -2,11 +2,19 @@
 <html>
 <head>
 <title>Pankarinkos Blog</title>
+<style>
+body {
+  height: 500px;
+  background-color: #d70a53;
+  background-image: linear-gradient(to right, #d70a53, #fb607f, #da70d6, #5d3954);
+}
+</style>
 </head>
 <body>
 
 <h1>First Chapter</h1>
 <p>Hello</p>
+<div id="grad"></div>
 
 </body>
 </html> 
