Soften gradient background

--- a/website.html
+++ b/website.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Pankarinkos Blog</title>
+<title>
+    Pankarinkos Blog</title>
 <style>
 body {
   height: 500px;
   background-color: #d70a53;
-  background-image: linear-gradient(to right, #d70a53, #fb607f, #da70d6, #5d3954);
+  background-image: linear-gradient(to right, #d70a53, #682860);
 }
 </style>
 </head>
 <body>
 
-<h1>First Chapter</h1>
+<h1  style="text-align:center; color:white; font:girly" >Pankarinko's Blog</h1>
 <p>Hello</p>
 <div id="grad"></div>
 
