--- a/website.html
+++ b/website.html
@@ -13,7 +13,7 @@ body {
 </head>
 <body>
 
-<h1  style="text-align:center; color:white; font:girly" >Pankarinko's Blog</h1>
+<h1 style="text-align:center; color:white">Pankarinko's Blog</h1>
 <p>Hello</p>
 <div id="grad"></div>
 
