--- a/website.html
+++ b/website.html
@@ -9,13 +9,28 @@ body {
   background-color: #d70a53;
   background-image: linear-gradient(to right, #d70a53, #682860);
 }
+.gradient-button { 
+  border: none;
+  background: linear-gradient(to right, #fcc200, #008000);
+  box-shadow: 0 10px 10px -2px rgba(0,0,0,.25);
+  padding: 16px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 24px;
+  margin: 4px 2px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+}
+
 </style>
 </head>
 <body>
 
-<h1 style="text-align:center; color:white">Pankarinko's Blog</h1>
-<p>Hello</p>
-<div id="grad"></div>
+<h1 style="text-align:center; color:white; font-family: Candara, cursive">Pankarinko's Blog</h1>
+<p style="text-align:center; color:white; font-family: Candara, cursive">Hello here is a song I like. Enjoy!</p>
+
+<button class="gradient-button">Click Me!</button> 
 
 </body>
 </html> 
