--- a/website.html
+++ b/website.html
@@ -17,11 +17,13 @@ body {
   text-align: center;
   text-decoration: none;
   display: inline-block;
+  font-family: cursive;
   font-size: 24px;
   margin: 4px 2px;
   transition-duration: 0.4s;
   cursor: pointer;
 }
+
 
 </style>
 </head>
