--- a/website.html
+++ b/website.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset='utf-8'>
 <title>
     Pankarinkos Blog</title>
 <style>
@@ -13,7 +14,7 @@ body {
 .gradient-button {
   border-style: none; 
   height: 90px;
-  width: 260px;
+  width: 200px;
   background: #00755e;
   box-shadow: 0 10px 10px -2px rgba(0,0,0,.25);
   padding: 16px 32px;
@@ -23,18 +24,22 @@ body {
   font-family: cursive;
   color: white;
   font-size: 28px;
-  margin: auto;
+  margin: 4px 2px;
   transition-duration: 0.4s;
   cursor: pointer;
-  border-radius: 50%;
+  border-radius: 8px;
+  position: fixed;
+  top: -4px;
+  left: 10px;
 }
 
 .gradient-button:hover { 
-  height: 100px;
-  width: 300px;
+  height: 120px;
+  width: 230px;
+  border-radius: 10px;
   background: linear-gradient(to right, #008000, #fcc200);
   font-size: 36px;
-  margin: 4px 6px;
+  margin: 6px 6px;
 }
 
 
@@ -45,7 +50,7 @@ body {
 <h1 style="text-align:center; color:white; font-family: Candara, cursive">Pankarinko's Blog</h1>
 <p style="text-align:center; color:white; font-family: Candara, cursive">Hello here is a song I like. Enjoy!</p>
 
-<button class="gradient-button">Click Me!</button> 
+<button class="gradient-button">Click Me!</button>  
 
 </body>
 </html> 
