--- a/website.html
+++ b/website.html
@@ -42,6 +42,17 @@ body {
   margin: 6px 6px;
 }
 
+.gradient-button-1 {
+    position: fixed;
+  top: -4px;
+  left: 10px;
+}
+
+.gradient-button-2 {
+    position: fixed;
+  top: -4px;
+  left: 220px;
+}
 
 </style>
 </head>
@@ -50,7 +61,8 @@ body {
 <h1 style="text-align:center; color:white; font-family: Candara, cursive">Pankarinko's Blog</h1>
 <p style="text-align:center; color:white; font-family: Candara, cursive">Hello here is a song I like. Enjoy!</p>
 
-<button class="gradient-button">Click Me!</button>  
+<button class="gradient-button gradient-button-1">Click Me!</button> 
+<button class="gradient-button gradient-button-2">Click Me Again!</button> 
 
 </body>
 </html> 
