--- a/website.html
+++ b/website.html
@@ -34,7 +34,7 @@ body {
 }
 
 .gradient-button:hover { 
-  height: 100px;
+  height: 110px;
   width: 220px;
   border-radius: 10px;
   background: linear-gradient(to right, #008000, #fcc200);
@@ -58,7 +58,7 @@ body {
 </head>
 <body>
 
-<h1 style="text-align:center; color:white; font-family: Candara, cursive">Pankarinko's Blog</h1>
+<h1 style="text-align:center; color:white; font-family: Candara, cursive; font-size: 46px">Pankarinko's Blog</h1>
 <p style="text-align:center; color:white; font-family: Candara, cursive">Hello here is a song I like. Enjoy!</p>
 
 <button class="gradient-button gradient-button-2">Click Me Again!</button> 
