Add link to button

--- a/website.html
+++ b/website.html
@@ -62,7 +62,7 @@ body {
 <p style="text-align:center; color:white; font-family: Candara, cursive">Hello here is a song I like. Enjoy!</p>
 
 <button class="gradient-button gradient-button-2">Click Me Again!</button> 
-<button class="gradient-button gradient-button-1">Click Me!</button> 
+<button class="gradient-button gradient-button-1"; onclick="window.location.href='///home/panka/Projects/Blog/GirlsGuide.html'">Click Me!</button> 
 
 </body>
 </html> 
