Make links work globally

--- a/GirlsGuide.html
+++ b/GirlsGuide.html
@@ -60,7 +60,7 @@ body {
 
 <h1 style="text-align:center; color:white; font-family: Candara, cursive; font-size: 46px">A girl's guide to studying computer science</h1>
 
-<button class="gradient-button gradient-button-1"; onclick="window.location.href='///home/panka/Projects/Blog/website.html'">Back</button> 
+<button class="gradient-button gradient-button-1"; onclick="window.location.href='website.html'">Back</button> 
 
 </body>
 </html> 
