--- a/lyrics.html
+++ b/lyrics.html
@@ -7,14 +7,14 @@
 <style>
 body {
   height: 500px;
-  background-color: #d70a53;
-  background-image: linear-gradient(to right, #d70a53, #682860);
+  background-color: #21421e;
+  background-image: linear-gradient(to right, #21421e, #004b49);
 }
 
 .gradient-button {
   border-style: none; 
   height: 90px;
-  width: 200px;
+  width: 150px;
   background: #00755e;
   box-shadow: 0 10px 10px -2px rgba(0,0,0,.25);
   padding: 16px 32px;
@@ -35,7 +35,7 @@ body {
 
 .gradient-button:hover { 
   height: 110px;
-  width: 220px;
+  width: 200px;
   border-radius: 10px;
   background: linear-gradient(to right, #008000, #fcc200);
   font-size: 36px;
@@ -44,8 +44,8 @@ body {
 
 .gradient-button-1 {
     position: fixed;
-  top: -4px;
-  left: 10px;
+  top: 100px;
+  left: -5px;
 }
 
 .gradient-button-2 {
@@ -58,11 +58,9 @@ body {
 </head>
 <body>
 
-<h1 style="text-align:center; color:white; font-family: Candara, cursive; font-size: 46px">Pankarinko's Blog</h1>
-<p style="text-align:center; color:white; font-family: Candara, cursive">Hello here is a song I like. Enjoy!</p>
+<h1 style="text-align:center; color:white; font-family: Candara, cursive; font-size: 46px">Lyrics translations</h1>
 
-<button class="gradient-button gradient-button-2"; onclick="window.location.href='lyrics.html'">Click Me Again!</button> 
-<button class="gradient-button gradient-button-1"; onclick="window.location.href='GirlsGuide.html'">Click Me!</button> 
+<button class="gradient-button gradient-button-1"; onclick="window.location.href='website.html'">Back</button> 
 
 </body>
-</html>
+</html> 
