Add a elements for links

--- a/lyrics.html
+++ b/lyrics.html
@@ -60,7 +60,7 @@ body {
 
 <h1 style="text-align:center; color:white; font-family: Candara, cursive; font-size: 46px">Lyrics translations</h1>
 
-<button class="gradient-button gradient-button-1"; onclick="window.location.href='website.html'">Back</button> 
+<button class="gradient-button gradient-button-1"><a href="website.html">Back</a></button> 
 
 </body>
 </html> 
