--- a/website.html
+++ b/website.html
@@ -61,8 +61,8 @@ body {
 <h1 style="text-align:center; color:white; font-family: Candara, cursive; font-size: 46px">Pankarinko's Blog</h1>
 <p style="text-align:center; color:white; font-family: Candara, cursive">Hello here is a song I like. Enjoy!</p>
 
-<button class="gradient-button gradient-button-2"><a href="lyrics.html">Click Me Again!</a></button> 
-<button class="gradient-button gradient-button-1"><a href="GirlsGuide.html">Click Me!</a></button> 
+<a href="lyrics.html"><button class="gradient-button gradient-button-2">Click Me Again!</button></a>
+<a href="GirlsGuide.html"><button class="gradient-button gradient-button-1">Click Me!</button></a>
 
 </body>
 </html>
