--- a/StudyLinks.html
+++ b/StudyLinks.html
@@ -7,14 +7,14 @@
 <style>
 body {
   height: 500px;
-  background-color: #702963;
-  background-image: linear-gradient(to right, #702963, #436b95);
+  background-color: #ff91a4;
+  background: linear-gradient(to right, #fc6c85, #6ca0dc);;
 }
 
 .gradient-button {
   border-style: none; 
   height: 90px;
-  width: 170px;
+  width: 150px;
   background: #00755e;
   box-shadow: 0 10px 10px -2px rgba(0,0,0,.25);
   padding: 16px 32px;
@@ -35,7 +35,7 @@ body {
 
 .gradient-button:hover { 
   height: 110px;
-  width: 220px;
+  width: 200px;
   border-radius: 10px;
   background: linear-gradient(to right, #008000, #fcc200);
   font-size: 36px;
@@ -58,10 +58,11 @@ body {
 </head>
 <body>
 
-<h1 style="text-align:center; color:white; font-family: Candara, cursive; font-size: 46px">A girl's guide to studying computer science</h1>
-
-<a href="website.html"><button class="gradient-button gradient-button-1" >Back</button></a>
-<a href="StudyLinks.html"><button class="gradient-button gradient-button-2" >Studies</button></a>
+<h1 style="text-align:center; color:white; font-family: Candara, cursive; font-size: 46px">Studies about gender differences in abilities</h1>
+<h2 style="text-align:center; color:white; font-family: Candara, cursive; font-size: 32px">(Spoiler: there is none)</h2>
+ 
+<a href="GirlsGuide.html"><button class="gradient-button gradient-button-1" >Back</button></a>
+<a href="website.html"><button class="gradient-button gradient-button-2" >Main Page</button></a>
 
 </body>
 </html> 
