Fix background image

--- a/StudyLinks.html
+++ b/StudyLinks.html
@@ -8,7 +8,7 @@
 body {
   height: 500px;
   background-color: #ff91a4;
-  background: linear-gradient(to right, #fc6c85, #6ca0dc);;
+  background-image: linear-gradient(to right, #fb607f, #1e90ff);
 }
 
 .gradient-button {
