--- a/website.html
+++ b/website.html
@@ -13,8 +13,8 @@ body {
 
 .gradient-button {
   border-style: none; 
-  height: 90px;
-  width: 200px;
+  height: 200px;
+  width: 180px;
   background: #00755e;
   box-shadow: 0 10px 10px -2px rgba(0,0,0,.25);
   padding: 16px 32px;
@@ -24,7 +24,7 @@ body {
   font-family: cursive;
   color: white;
   font-size: 28px;
-  margin: 4px 2px;
+  margin: 2px 2px;
   transition-duration: 0.4s;
   cursor: pointer;
   border-radius: 8px;
@@ -34,8 +34,8 @@ body {
 }
 
 .gradient-button:hover { 
-  height: 110px;
-  width: 220px;
+  height: 230px;
+  width: 210px;
   border-radius: 10px;
   background: linear-gradient(to right, #008000, #fcc200);
   font-size: 36px;
@@ -51,7 +51,7 @@ body {
 .gradient-button-2 {
     position: fixed;
   top: -4px;
-  left: 220px;
+  left: 200px;
 }
 
 </style>
@@ -61,8 +61,8 @@ body {
 <h1 style="text-align:center; color:white; font-family: Candara, cursive; font-size: 46px">Pankarinko's Blog</h1>
 <p style="text-align:center; color:white; font-family: Candara, cursive">Hello here is a song I like. Enjoy!</p>
 
-<a href="lyrics.html"><button class="gradient-button gradient-button-2">Click Me Again!</button></a>
-<a href="GirlsGuide.html"><button class="gradient-button gradient-button-1">Click Me!</button></a>
+<a href="lyrics.html"><button class="gradient-button gradient-button-2">Song translations</button></a>
+<a href="GirlsGuide.html"><button class="gradient-button gradient-button-1">Girls' Guide to the tech world</button></a>
 
 </body>
 </html>
