Change website to index.html

--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
 <style>
 body {
   height: 500px;
-  background-color: #d70a53;
-  background-image: linear-gradient(to right, #d70a53, #682860);
+  background-color: #702963;
+  background-image: linear-gradient(to right, #702963, #436b95);
 }
 
 .gradient-button {
   border-style: none; 
   height: 200px;
   width: 180px;
-  background: #00755e;
+  background: #00a86b;
   box-shadow: 0 10px 10px -2px rgba(0,0,0,.25);
   padding: 16px 32px;
   text-align: center;
@@ -37,7 +37,7 @@ body {
   height: 230px;
   width: 210px;
   border-radius: 10px;
-  background: linear-gradient(to right, #008000, #fcc200);
+  background: linear-gradient(to right, #66b032, #fcc200);
   font-size: 36px;
   margin: 6px 6px;
 }
