--- a/GirlsGuide.html
+++ b/GirlsGuide.html
@@ -7,15 +7,15 @@
 <style>
 body {
   height: 500px;
-  background-color: #702963;
-  background-image: linear-gradient(to right, #702963, #436b95);
+  background-color: #d70a53;
+  background-image: linear-gradient(to right, #d70a53, #682860);
 }
 
 .gradient-button {
   border-style: none; 
   height: 90px;
   width: 170px;
-  background: #00755e;
+  background: #00a86b;
   box-shadow: 0 10px 10px -2px rgba(0,0,0,.25);
   padding: 16px 32px;
   text-align: center;
@@ -37,7 +37,7 @@ body {
   height: 110px;
   width: 220px;
   border-radius: 10px;
-  background: linear-gradient(to right, #008000, #fcc200);
+  background: linear-gradient(to right, #66b032, #fcc200);
   font-size: 36px;
   margin: 6px 6px;
 }
@@ -61,7 +61,7 @@ body {
 <h1 style="text-align:center; color:white; font-family: Candara, cursive; font-size: 46px">A girl's guide to studying computer science</h1>
 
 <a href="StudyLinks.html"><button class="gradient-button gradient-button-2" >Studies</button></a>
-<a href="website.html"><button class="gradient-button gradient-button-1" >Back</button></a>
+<a href="index.html"><button class="gradient-button gradient-button-1" >Back</button></a>
 
 
 </body>
