--- a/lyrics.html
+++ b/lyrics.html
@@ -15,7 +15,7 @@ body {
   border-style: none; 
   height: 90px;
   width: 150px;
-  background: #00755e;
+  background: #00a86b;
   box-shadow: 0 10px 10px -2px rgba(0,0,0,.25);
   padding: 16px 32px;
   text-align: center;
@@ -37,7 +37,7 @@ body {
   height: 110px;
   width: 200px;
   border-radius: 10px;
-  background: linear-gradient(to right, #008000, #fcc200);
+  background: linear-gradient(to right, #66b032, #fcc200);
   font-size: 36px;
   margin: 6px 6px;
 }
@@ -60,7 +60,7 @@ body {
 
 <h1 style="text-align:center; color:white; font-family: Candara, cursive; font-size: 46px">Lyrics translations</h1>
 
-<a href="website.html"><button class="gradient-button gradient-button-1" >Back</button></a>
+<a href="index.html"><button class="gradient-button gradient-button-1" >Back</button></a>
 
 </body>
 </html> 
