Fix grammar mistake

--- a/GirlsGuide.html
+++ b/GirlsGuide.html
@@ -58,7 +58,7 @@ body {
 </head>
 <body>
 
-<h1 style="text-align:center; color:white; font-family: Candara, cursive; font-size: 46px">A girl's guide to studying computer science</h1>
+<h1 style="text-align:center; color:white; font-family: Candara, cursive; font-size: 46px">A girls' guide to studying computer science</h1>
 
 <a href="StudyLinks.html"><button class="gradient-button gradient-button-2" >Studies</button></a>
 <a href="index.html"><button class="gradient-button gradient-button-1" >Back</button></a>
