--- a/GirlsGuide.html
+++ b/GirlsGuide.html
@@ -54,6 +54,7 @@ body {
   left: -5px;
 }
 
+
 </style>
 </head>
 <body>
@@ -62,7 +63,15 @@ body {
 
 <a href="StudyLinks.html"><button class="gradient-button gradient-button-2" >Studies</button></a>
 <a href="index.html"><button class="gradient-button gradient-button-1" >Back</button></a>
-
+<p style="text-align:center/right;  color:white; font-family: Candara, cursive; font-size: 24px">So huh, where do I start. As a girl who is quite good at math and have for the most part of my life pursued a career in tech, I know self-doubt all too well. 
+    If you're a girl and your want to make it in STEM  you either already share my experiences or you probably will. And if you don't, consider yourself one of the lucky ones that life didn't screw up. 
+    If you are a guy, I hope this will help you understand women your female colleges more. 
+    
+    Here I want to summarize all the information I have gathered about why women are good at STEM and why girls absolutely have a place in computer science. 
+    I may also point out other gender differences in other areas (like discrimination against and societal pressure on men and ethnic groups).
+    also, I want to help girls crazy enough to be in my shoes to remain motivated for programming and science and minimize the effects of society on you as much as possible.
+    Not gonna lie, I am also writing this for me, since I honestly wish something like the had been handed to me at the beginning of my computer science journey.
+</p>
 
 </body>
 </html> 
