--- a/GirlsGuide.html
+++ b/GirlsGuide.html
@@ -63,7 +63,7 @@ body {
 
 <a href="StudyLinks.html"><button class="gradient-button gradient-button-2" >Studies</button></a>
 <a href="index.html"><button class="gradient-button gradient-button-1" >Back</button></a>
-<p style="text-align:center/right;  color:white; font-family: Candara, cursive; font-size: 24px">So huh, where do I start. As a girl who is quite good at math and have for the most part of my life pursued a career in tech, I know self-doubt all too well. 
+<p style="text-align:center/right; margin:4px 200px; color:white; font-family: Candara, cursive; font-size: 24px">So huh, where do I start. As a girl who is quite good at math and have for the most part of my life pursued a career in tech, I know self-doubt all too well. 
     If you're a girl and your want to make it in STEM  you either already share my experiences or you probably will. And if you don't, consider yourself one of the lucky ones that life didn't screw up. 
     If you are a guy, I hope this will help you understand women your female colleges more. 
     
