--- a/GirlsGuide.html
+++ b/GirlsGuide.html
@@ -54,6 +54,40 @@ body {
   left: -5px;
 }
 
+.chapter-button {
+  border-style: none; 
+  height: 90px;
+  width: 170px;
+  background: #fb607f;
+  box-shadow: 0 10px 10px -2px rgba(0,0,0,.25);
+  padding: 16px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-family: cursive;
+  color: white;
+  font-size: 28px;
+  margin: 4px 2px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  border-radius: 50%;
+}
+
+.chapter-button:hover { 
+  height: 150px;
+  width: 340px;
+  border-radius: 50%;
+  background:  #8bbe1b;
+  font-size: 33px;
+  margin: 10px 10px;
+}
+
+.chapter-button-1 {
+  height: 120px;
+  width: 300px;
+  margin: 40px;
+}
+
 
 </style>
 </head>
@@ -75,6 +109,12 @@ body {
 </p>    
 <p  style="text-align:center/right; margin:8px 200px; color:white; font-family: Candara, sans-serif; font-size: 22px">At this point I want to point out that ever since I did find <a style="background: #cf71af" href="https://www.youtube.com/watch?v=nVzANHyxdZI"  target="_blank">this women's guide video</a> that I found suprisingly relatable that got way too little appreciation from the audience in the video.
 </p>
+
+<div style="text-align: center;">
+    <a href="GirlsGuide.html"><button class="chapter-button chapter-button-1">Chapter 1: Stereotype threat</button></a>
+    <a href="GirlsGuide.html"><button class="chapter-button chapter-button-1">Chapter 2: The confidence gap</button></a>
+    <a href="GirlsGuide.html"><button class="chapter-button chapter-button-1">Chapter 1: Stereotype threat</button></a>
+ </div>
 
 </body>
 </html> 
